[package]
name = "transliterati"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
flate2 = "*"
rand = "*"
rayon = "*"
tokenizers = "*"
strsim = "0.10.0"
serde_json = "*"

[profile.release]
lto = true
codegen-units = 1
